# commander-deck-analyzer

./: .env.example  .gitignore  README.md  package-lock.json  package.json  railway.json  vitest.config.ts
config/: banned-list.json  bracket-profiles.json  classifier-overrides.json  game-changers.json  known-combos.json
docs/: DEV_DB.md  PLAN.md
prisma/: schema.prisma
prisma/migrations/20260501233214_init/: migration.sql
scripts/: classify-cards.ts  scryfall-sync.ts
sim/: README.md  pyproject.toml
sim/app/: __init__.py  main.py  schemas.py
sim/tests/: test_health.py
src/app/: layout.tsx  page.tsx
src/app/compare/: page.tsx
src/components/: Analyzer.tsx  CompareControls.tsx  SavedDeckView.tsx
src/lib/: session.ts
src/lib/analytics/: archetype.test.ts  archetype.ts  derive.test.ts  derive.ts  gameplan.test.ts  gameplan.ts  index.ts  types.ts
src/lib/bracket/: estimate.ts
src/lib/classifier/: classify.test.ts  classify.ts  index.ts  overrides.ts  rules.ts  types.ts
src/lib/combos/: builtin.test.ts  builtin.ts
src/lib/db/: card.ts  client.ts
src/lib/decklist/: banned.ts  index.ts  parse.test.ts  parse.ts  partners.test.ts  partners.ts  types.ts  validate.test.ts  validate.ts
src/lib/edhrec/: api.test.ts  api.ts  index.ts  slug.test.ts  slug.ts  types.ts
src/lib/recommend/: build.test.ts  build.ts  index.ts  similar.test.ts  similar.ts  types.ts
src/lib/scryfall/: api.ts  lookup.ts  normalize.test.ts  normalize.ts  prismaUpserter.ts  sync.test.ts  sync.ts  types.ts
src/lib/sim/: aggregate.ts  bracket.ts  decisions.test.ts  decisions.ts  (+12 more)
(+13 files in other folders)
